# hamerkop

./: LICENSE  README.md  hamerkop  hamerkop.cabal  stack.yaml
app/: Main.hs
src/: Commands.hs  Env.hs  Types.hs
test/: CommandsSpec.hs  EnvSpec.hs  Helper.hs  TypesSpec.hs
