name:                hamerkop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lpalma/hamerkop#readme
license:             BSD3
license-file:        LICENSE
author:              Luciano Palma
maintainer:          lucianopalma90@gmail.com
copyright:           (c) 2017 Luciano Palma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Env
                     , Types
                     , Commands
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time
                     , mtl
  default-language:    Haskell2010

executable hamerkop-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamerkop
  default-language:    Haskell2010

test-suite hamerkop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamerkop
                     , hspec
                     , mtl
                     , containers
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lpalma/hamerkop
